# AddHQ-Bot

./: main.py  pyproject.toml
cogs/: __init__.py  invites.py
